--- a/submit.html
+++ b/submit.html
@@ -1,4 +1,4 @@
-<title>Gabagool Personality Quiz</title>
+<title>Bowmanium Crafting Table Personality Quiz</title>
 <script src="script.js"></script>
 <body bgcolor="#888888">
 	<table align="center" bgcolor="black" width="600">
@@ -6,7 +6,7 @@
 			<td>
 				<form action="submit.html">
 					<br>
-					<font face="sans-serif"><b>Personality Quiz</b></font>
+					<font face="sans-serif"><b>Bowmanium Crafting Table Personality Quiz</b></font>
 					<br><br>
 					<font face="sans-serif">You are</font>
 					<font face="sans-serif" id="result"></font>
