--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<input type="radio" name="score" value="1">
 					<font face="sans-serif">No</font>
 					<br><br>
-					<font face="sans-serif">Do you consider yourself as someone who overuses racial slurs</font>
+					<font face="sans-serif">Do you consider yourself as someone who overuses racial slurs?</font>
 					<br>
 					<input type="radio" name="score2" value="0">
 					<font face="sans-serif">Yes</font>
